feat: Se agrega controlador para consulta de semaforo docente. udistrital/resoluciones_cliente_v2#63
